test-suite/tests/ui/states/undeclared_reject.stderr
error: rejected state is not declared
 --> tests/ui/states/undeclared_reject.rs:8:21
  |
8 |     #[stated(reject(B))]
  |                     ^
