test-suite/tests/ui/states/undeclared_reject.rs
use stated::stated;

#[stated(states(A))]
pub struct Test<#[stated] S>;

#[stated]
impl<#[stated] S> Test<S> {
    #[stated(reject(B))]
    pub fn foo(self) {}
}

fn main() {}
